target/generated-sources/antlr4/org/niklas/elemental/Elemental/parser/WebIdlParser.java
// Generated from WebIdl.g4 by ANTLR 4.5
package org.niklas.elemental.Elemental.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WebIdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, WS=62, COMMENT=63, Identifier=64, Integer=65, Other=66, 
		String=67, Float=68, JavaLetter=69, JavaLetterOrDigit=70;
	public static final int
		RULE_definitions = 0, RULE_definition = 1, RULE_callbackOrinterface1 = 2, 
		RULE_callbackRestOrinterface1 = 3, RULE_interface1 = 4, RULE_partial = 5, 
		RULE_partialdefinition = 6, RULE_interface1Members = 7, RULE_interface1Member = 8, 
		RULE_dictionary = 9, RULE_dictionaryMembers = 10, RULE_dictionaryMember = 11, 
		RULE_default1 = 12, RULE_default1Value = 13, RULE_exception = 14, RULE_exceptionMembers = 15, 
		RULE_inheritance = 16, RULE_enum1 = 17, RULE_enumValueList = 18, RULE_enumValues = 19, 
		RULE_callbackRest = 20, RULE_typedef = 21, RULE_implementsStatement = 22, 
		RULE_const1 = 23, RULE_constValue = 24, RULE_booleanLiteral = 25, RULE_floatLiteral = 26, 
		RULE_attributeOroperation = 27, RULE_stringifierattributeOroperation = 28, 
		RULE_attribute = 29, RULE_inherit = 30, RULE_readOnly = 31, RULE_operation = 32, 
		RULE_qualifiers = 33, RULE_specials = 34, RULE_special = 35, RULE_operationRest = 36, 
		RULE_optionalIdentifier = 37, RULE_argumentList = 38, RULE_arguments = 39, 
		RULE_argument = 40, RULE_optionalOrRequiredargument = 41, RULE_argumentName = 42, 
		RULE_ellipsis = 43, RULE_exceptionMember = 44, RULE_exceptionField = 45, 
		RULE_extendedattributeList = 46, RULE_extendedattributes = 47, RULE_extendedattribute = 48, 
		RULE_extendedattributeRest = 49, RULE_extendedattributeInner = 50, RULE_other = 51, 
		RULE_argumentNameKeyword = 52, RULE_otherOrComma = 53, RULE_type = 54, 
		RULE_singletype = 55, RULE_uniontype = 56, RULE_unionMembertype = 57, 
		RULE_unionMembertypes = 58, RULE_nonAnytype = 59, RULE_consttype = 60, 
		RULE_primitivetype = 61, RULE_unrestrictedfloattype = 62, RULE_floattype = 63, 
		RULE_unsignedintegertype = 64, RULE_integertype = 65, RULE_optionalLong = 66, 
		RULE_typeSuffix = 67, RULE_typeSuffixStartingWithArray = 68, RULE_null1 = 69, 
		RULE_returntype = 70, RULE_extendedattributeNoArgs = 71, RULE_extendedattributeArgList = 72, 
		RULE_extendedattributeIdent = 73, RULE_extendedattributeNamedArgList = 74;
	public static final String[] ruleNames = {
		"definitions", "definition", "callbackOrinterface1", "callbackRestOrinterface1", 
		"interface1", "partial", "partialdefinition", "interface1Members", "interface1Member", 
		"dictionary", "dictionaryMembers", "dictionaryMember", "default1", "default1Value", 
		"exception", "exceptionMembers", "inheritance", "enum1", "enumValueList", 
		"enumValues", "callbackRest", "typedef", "implementsStatement", "const1", 
		"constValue", "booleanLiteral", "floatLiteral", "attributeOroperation", 
		"stringifierattributeOroperation", "attribute", "inherit", "readOnly", 
		"operation", "qualifiers", "specials", "special", "operationRest", "optionalIdentifier", 
		"argumentList", "arguments", "argument", "optionalOrRequiredargument", 
		"argumentName", "ellipsis", "exceptionMember", "exceptionField", "extendedattributeList", 
		"extendedattributes", "extendedattribute", "extendedattributeRest", "extendedattributeInner", 
		"other", "argumentNameKeyword", "otherOrComma", "type", "singletype", 
		"uniontype", "unionMembertype", "unionMembertypes", "nonAnytype", "consttype", 
		"primitivetype", "unrestrictedfloattype", "floattype", "unsignedintegertype", 
		"integertype", "optionalLong", "typeSuffix", "typeSuffixStartingWithArray", 
		"null1", "returntype", "extendedattributeNoArgs", "extendedattributeArgList", 
		"extendedattributeIdent", "extendedattributeNamedArgList"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'callback'", "'interface'", "'{'", "'}'", "';'", "'partial'", "'dictionary'", 
		"'='", "'[]'", "'exception'", "':'", "'enum'", "','", "'('", "')'", "'typedef'", 
		"'implements'", "'const'", "'null'", "'true'", "'false'", "'-'", "'Infinity'", 
		"'NaN'", "'stringifier'", "'jsonifier;'", "'attribute'", "'inherit'", 
		"'readonly'", "'static'", "'getter'", "'setter'", "'creator'", "'deleter'", 
		"'legacycaller'", "'optional'", "'...'", "'['", "']'", "'.'", "'<'", "'>'", 
		"'?'", "'Date'", "'DOMString'", "'any'", "'boolean'", "'byte'", "'double'", 
		"'Float'", "'long'", "'object'", "'octet'", "'or'", "'sequence'", "'short'", 
		"'unsigned'", "'void'", "'unrestricted'", "'<void>'", "'float'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "WS", "COMMENT", "Identifier", "Integer", "Other", "String", 
		"Float", "JavaLetter", "JavaLetterOrDigit"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebIdl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebIdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DefinitionsContext extends ParserRuleContext {
		public ExtendedattributeListContext extendedattributeList() {
			return getRuleContext(ExtendedattributeListContext.class,0);
		}
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WebIdlParser.EOF, 0); }
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitDefinitions(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_definitions);
		try {
			setState(155);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__5:
			case T__6:
			case T__9:
			case T__11:
			case T__15:
			case T__37:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				extendedattributeList();
				setState(151);
				definition();
				setState(152);
				definitions();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public CallbackOrinterface1Context callbackOrinterface1() {
			return getRuleContext(CallbackOrinterface1Context.class,0);
		}
		public PartialContext partial() {
			return getRuleContext(PartialContext.class,0);
		}
		public DictionaryContext dictionary() {
			return getRuleContext(DictionaryContext.class,0);
		}
		public ExceptionContext exception() {
			return getRuleContext(ExceptionContext.class,0);
		}
		public Enum1Context enum1() {
			return getRuleContext(Enum1Context.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public ImplementsStatementContext implementsStatement() {
			return getRuleContext(ImplementsStatementContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(164);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				callbackOrinterface1();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				partial();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				dictionary();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(160);
				exception();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 5);
				{
				setState(161);
				enum1();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 6);
				{
				setState(162);
				typedef();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 7);
				{
				setState(163);
				implementsStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallbackOrinterface1Context extends ParserRuleContext {
		public CallbackRestOrinterface1Context callbackRestOrinterface1() {
			return getRuleContext(CallbackRestOrinterface1Context.class,0);
		}
		public Interface1Context interface1() {
			return getRuleContext(Interface1Context.class,0);
		}
		public CallbackOrinterface1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callbackOrinterface1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterCallbackOrinterface1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitCallbackOrinterface1(this);
		}
	}

	public final CallbackOrinterface1Context callbackOrinterface1() throws RecognitionException {
		CallbackOrinterface1Context _localctx = new CallbackOrinterface1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_callbackOrinterface1);
		try {
			setState(169);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				match(T__0);
				setState(167);
				callbackRestOrinterface1();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				interface1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallbackRestOrinterface1Context extends ParserRuleContext {
		public CallbackRestContext callbackRest() {
			return getRuleContext(CallbackRestContext.class,0);
		}
		public Interface1Context interface1() {
			return getRuleContext(Interface1Context.class,0);
		}
		public CallbackRestOrinterface1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callbackRestOrinterface1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterCallbackRestOrinterface1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitCallbackRestOrinterface1(this);
		}
	}

	public final CallbackRestOrinterface1Context callbackRestOrinterface1() throws RecognitionException {
		CallbackRestOrinterface1Context _localctx = new CallbackRestOrinterface1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_callbackRestOrinterface1);
		try {
			setState(173);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				callbackRest();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				interface1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface1Context extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(WebIdlParser.Identifier, 0); }
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public Interface1MembersContext interface1Members() {
			return getRuleContext(Interface1MembersContext.class,0);
		}
		public Interface1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterInterface1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitInterface1(this);
		}
	}

	public final Interface1Context interface1() throws RecognitionException {
		Interface1Context _localctx = new Interface1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_interface1);
		try {
			setState(186);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(T__1);
				setState(176);
				match(Identifier);
				setState(177);
				inheritance();
				setState(178);
				match(T__2);
				setState(179);
				interface1Members();
				setState(180);
				match(T__3);
				setState(181);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183);
				match(T__1);
				setState(184);
				match(Identifier);
				setState(185);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartialContext extends ParserRuleContext {
		public PartialdefinitionContext partialdefinition() {
			return getRuleContext(PartialdefinitionContext.class,0);
		}
		public PartialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partial; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterPartial(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitPartial(this);
		}
	}

	public final PartialContext partial() throws RecognitionException {
		PartialContext _localctx = new PartialContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_partial);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(T__5);
			setState(189);
			partialdefinition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartialdefinitionContext extends ParserRuleContext {
		public Interface1Context interface1() {
			return getRuleContext(Interface1Context.class,0);
		}
		public DictionaryContext dictionary() {
			return getRuleContext(DictionaryContext.class,0);
		}
		public PartialdefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partialdefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterPartialdefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitPartialdefinition(this);
		}
	}

	public final PartialdefinitionContext partialdefinition() throws RecognitionException {
		PartialdefinitionContext _localctx = new PartialdefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_partialdefinition);
		try {
			setState(193);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				interface1();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				dictionary();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface1MembersContext extends ParserRuleContext {
		public ExtendedattributeListContext extendedattributeList() {
			return getRuleContext(ExtendedattributeListContext.class,0);
		}
		public Interface1MemberContext interface1Member() {
			return getRuleContext(Interface1MemberContext.class,0);
		}
		public Interface1MembersContext interface1Members() {
			return getRuleContext(Interface1MembersContext.class,0);
		}
		public Interface1MembersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface1Members; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterInterface1Members(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitInterface1Members(this);
		}
	}

	public final Interface1MembersContext interface1Members() throws RecognitionException {
		Interface1MembersContext _localctx = new Interface1MembersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_interface1Members);
		try {
			setState(200);
			switch (_input.LA(1)) {
			case T__13:
			case T__17:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__37:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__50:
			case T__51:
			case T__52:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__60:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				extendedattributeList();
				setState(196);
				interface1Member();
				setState(197);
				interface1Members();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface1MemberContext extends ParserRuleContext {
		public Const1Context const1() {
			return getRuleContext(Const1Context.class,0);
		}
		public AttributeOroperationContext attributeOroperation() {
			return getRuleContext(AttributeOroperationContext.class,0);
		}
		public Interface1MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface1Member; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterInterface1Member(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitInterface1Member(this);
		}
	}

	public final Interface1MemberContext interface1Member() throws RecognitionException {
		Interface1MemberContext _localctx = new Interface1MemberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_interface1Member);
		try {
			setState(204);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(202);
				const1();
				}
				break;
			case T__13:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__50:
			case T__51:
			case T__52:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case T__58:
			case T__60:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(203);
				attributeOroperation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DictionaryContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(WebIdlParser.Identifier, 0); }
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public DictionaryMembersContext dictionaryMembers() {
			return getRuleContext(DictionaryMembersContext.class,0);
		}
		public DictionaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dictionary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).enterDictionary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebIdlListener ) ((WebIdlListener)listener).exitDictionary(this);
		}
	}

	public final DictionaryContext dictionary() throws RecognitionException {
		DictionaryContext _localctx = new DictionaryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dictionary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(T__6);
			setState(207);
			match(Identifier);
			setState(208);
			inheritance();
			setState(209);
			match(T__2);
			setState(210);
			dictionaryMembers();
			setState(211);
			match(T__3);
			setState(212);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
